Fixed count-container overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,10 @@ h1 {
     display: inline-block;
     background-color: white;
     height: 100px;
-    width: 100px;
     border-radius: 10px;
     font-size: 4.5em;
     font-weight: bold;
+    padding: 0 25px;
 }
 
 .centered {
